<resources>
    <string name="app_name">Satu.in</string>
    <string name="mulai_button">Mulai</string>
    <string name="get_started">Transaksi mudah dari e-wallet apapun</string>
    <string name="getStarted2">Pilih ingin masuk sebagai apakah anda?</string>
    <string name="getStartedSeller">Penjual</string>
    <string name="getStartedBuyer">Pembeli</string>
    <string name="login">Masuk</string>
    <string name="loginAkun">E-mail/Telepon</string>
    <string name="loginPass">Kata Sandi</string>
    <string name="loginBelum">Belum memiliki akun?</string>
    <string name="loginRegister">Daftar disini</string>
    <string name="Register">Daftar</string>
    <string name="login2"> <b>Login</b></string>
    <string name="Nama">Nama</string>
    <string name="KonfirmasiPass">Konfirmasi Kata Sandi</string>
    <string name="KembaliKe"> Kembali ke </string>
    <string name="SelamatDatang"> Selamat Datang! </string>
    <string name="Silahkan">Silahkan isi beberapa informasi berikut untuk bergabung dengan Satu.in</string>
    <string name="NamaUsaha">Nama Usaha</string>
    <string name="JenisUsaha">Jenis Usaha (e.x. toko roti, minuman, pakaian, dll)</string>
    <string name="NamaPenjual">Nama Penjual</string>
    <string name="Alamat">Alamat</string>
    <string name="Selanjutnya">Selanjutnya</string>
    <string name="SaldoAnda">Saldo Anda</string>
    <string name="SaldoHomepagePenjual">Rp 7.584.300</string>
    <string name="PembayaranBaru">Pembayaran Baru</string>
    <string name="PenarikanSaldo">Penarikan Saldo</string>
    <string name="ProfilUsaha">Profil Usaha</string>
    <string name="EditProfilUsaha">Edit Profil Usaha</string>
    <string name="SushiMura">Sushi Mura</string>
    <string name="AlamatFragment">Mall Festival Citylink lt. 2 Bandung, Jawa Barat</string>
    <string name="RestoranJepang">Restoran Jepang</string>
    <string name="AdimasBayu">Adimas Bayu</string>
    <string name="NamaUsahaSushiMura">Nama usaha : Sushi Mura</string>
    <string name="JenisUsahaRestoranJepang">Jenis usaha : Restoran Jepang</string>
    <string name="AlamatAlamatFragment">Alamat : Mall Festival Citylink lt. 2 Bandung, Jawa Barat</string>
    <string name="NamaPenjualAdimasBayu">Nama penjual : Adimas Bayu</string>
    <string name="RiwayatPembayaran">Riwayat Pembayaran</string>
    <string name="MasukkanNominal">Masukkan nominal saldo yang ingin ditarik</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pmPilih">Pilih Metode Pembayaran</string>
    <string name="pmTanya">Apakah anda melakukan pembelian sendiri atau patungan?</string>
    <string name="dm">Detail Makanan</string>
    <string name="pb">Selamat Pembayaran Anda Berhasil</string>
    <string name="pbbtn">Lihat Detail Pembayaran</string>
    <string name="pg">Pembayaran Gagal, Silahkan Coba Lagi !</string>
    <string name="pgbtn">Kembali</string>
    <string name="ok">Oke</string>
</resources>