<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilUsaha">

    <View
        android:id="@+id/ViewPU"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginBottom="578dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/primary_yellow"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/logologin"
        app:layout_constraintBottom_toBottomOf="@+id/ViewPU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ViewPU" />

    <TextView
        android:id="@+id/SelamatDatang"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="510dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/SelamatDatang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewPU" />

    <TextView
        android:id="@+id/DescriptionPU"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="390dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/Silahkan"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelamatDatang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/editTextNamaUsaha"
        android:background="@drawable/rounded_corner2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="390dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="10dp"
        android:autofillHints="@string/loginAkun"
        android:ems="10"
        android:hint="@string/NamaUsaha"
        android:inputType="textPersonName"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionPU"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/editTextJenisUsaha"
        android:background="@drawable/rounded_corner2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="320dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="10dp"
        android:autofillHints="@string/loginAkun"
        android:ems="10"
        android:hint="@string/JenisUsaha"
        android:inputType="textPersonName"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNamaUsaha"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/editTextNamaPenjual"
        android:background="@drawable/rounded_corner2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="250dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="10dp"
        android:autofillHints="@string/loginAkun"
        android:ems="10"
        android:hint="@string/NamaPenjual"
        android:inputType="textPersonName"
        android:fontFamily="@font/poppins"
        android:textSize="13sp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextJenisUsaha"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/editTextAlamat"
        android:background="@drawable/rounded_corner2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="180dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="10dp"
        android:autofillHints="@string/loginAkun"
        android:ems="10"
        android:hint="@string/Alamat"
        android:inputType="textPersonName"
        android:fontFamily="@font/poppins"
        android:textSize="13sp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNamaPenjual"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/MulaiButtonPU"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Selanjutnya"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textColor="#FFCC08"
        android:drawableRight="@drawable/ic_outline_play_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlamat" />

</androidx.constraintlayout.widget.ConstraintLayout>