<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCC08"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="370dp"
        android:layout_height="300dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="424dp"
        android:src="@drawable/register1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="550dp"
        android:layout_marginTop="255dp"
        android:background="@drawable/bglogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="433dp"
        android:layout_marginRight="128dp"
        android:layout_marginLeft="128dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Register"
        android:textColor="@color/Brown2"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:layout_marginTop="100dp"
        android:layout_marginBottom="363dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/editTextTextPersonName"
        android:background="@drawable/rounded_corner2"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:hint="@string/Nama"
        android:fontFamily="@font/poppins"
        android:textSize="15sp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:layout_marginTop="164dp"
        android:layout_marginBottom="299dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/editTextEmail"
        android:background="@drawable/rounded_corner2"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:paddingLeft="10dp"
        android:fontFamily="@font/poppins"
        android:textSize="15sp"
        android:hint="@string/loginAkun"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:layout_marginTop="228dp"
        android:layout_marginBottom="235dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/editTextPasswordRegister"
        android:background="@drawable/rounded_corner2"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins"
        android:textSize="15sp"
        android:hint="@string/loginPass"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:layout_marginTop="292dp"
        android:layout_marginBottom="171dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/editTextKonfirmasiPasswordRegister"
        android:background="@drawable/rounded_corner2"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:paddingLeft="10dp"
        android:fontFamily="@font/poppins"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:hint="@string/KonfirmasiPass"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/DaftarButton"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Register"
        android:textColor="#FFCC08"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/KembaliKe"
        android:layout_width="93dp"
        android:layout_height="20dp"
        android:layout_marginBottom="52dp"
        android:layout_marginRight="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/KembaliKe"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DaftarButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@color/Transparent"
        android:id="@+id/BalikLogin"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginLeft="154dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login2"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DaftarButton" />


</androidx.constraintlayout.widget.ConstraintLayout>