<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilUsaha">

    <View
        android:id="@+id/ViewPU"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/primary_yellow" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/balikSebelumnya"
        android:layout_width="180dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:background="@color/Transparent"
        android:text="@string/PenarikanSaldo"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/pmbtn"
        app:layout_constraintLeft_toLeftOf="@+id/ViewPU"
        app:layout_constraintTop_toTopOf="@+id/ViewPU"/>

    <View
        android:id="@+id/ViewSaldoHP"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/ViewPU"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rounded_corner5" />

    <ImageView
        android:id="@+id/ppHomepagePenjual"
        android:src="@drawable/pp_penjual"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        app:layout_constraintBottom_toTopOf="@id/NamaPenjualHomepagePenjual"
        app:layout_constraintRight_toRightOf="@id/ViewSaldoHP"
        app:layout_constraintTop_toTopOf="@id/ViewSaldoHP" />

    <TextView
        android:id="@+id/SaldoHomepagePenjual"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintTop_toTopOf="@+id/ViewSaldoHP"
        app:layout_constraintLeft_toLeftOf="@+id/ViewSaldoHP"
        app:layout_constraintRight_toRightOf="@+id/ViewSaldoHP"
        app:layout_constraintBottom_toBottomOf="@+id/ViewSaldoHP"
        android:text="@string/SaldoAnda"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/primary_yellow"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/JumlahSaldoHomepagePenjual"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="100dp"
        app:layout_constraintTop_toBottomOf="@+id/SaldoHomepagePenjual"
        app:layout_constraintLeft_toLeftOf="@+id/ViewSaldoHP"
        app:layout_constraintRight_toRightOf="@+id/ViewSaldoHP"
        app:layout_constraintBottom_toBottomOf="@+id/ViewSaldoHP"
        android:text="@string/SaldoHomepagePenjual"
        android:fontFamily="@font/poppins_bold"
        android:textSize="23sp"
        android:textColor="@color/Brown2" />

    <TextView
        android:id="@+id/NamaPenjualHomepagePenjual"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/ppHomepagePenjual"
        app:layout_constraintLeft_toRightOf="@+id/JumlahSaldoHomepagePenjual"
        app:layout_constraintRight_toRightOf="@+id/ViewSaldoHP"
        app:layout_constraintBottom_toBottomOf="@+id/ViewSaldoHP"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/AdimasBayu"
        android:textSize="12sp"
        android:textColor="@color/Brown2" />

    <View
        android:id="@+id/ViewNominalSaldo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/ViewSaldoHP"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rounded_corner4" />
    
    <TextView
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/MasukkanNominal"
        android:gravity="center"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/Brown2"
        app:layout_constraintLeft_toLeftOf="@+id/ViewNominalSaldo"
        app:layout_constraintRight_toRightOf="@+id/ViewNominalSaldo"
        app:layout_constraintTop_toTopOf="@+id/ViewNominalSaldo" />

    <EditText
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintLeft_toLeftOf="@+id/ViewNominalSaldo"
        app:layout_constraintRight_toRightOf="@+id/ViewNominalSaldo"
        app:layout_constraintBottom_toBottomOf="@+id/ViewNominalSaldo"
        android:background="@drawable/rounded_corner5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SelanjutnyaButtonPU"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Selanjutnya"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textColor="#FFCC08"
        android:drawableRight="@drawable/ic_outline_play_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewNominalSaldo" />

</androidx.constraintlayout.widget.ConstraintLayout>